force-app/main/default/objects/KimbleOne__DeliveryGroupStage__c/KimbleOne__DeliveryGroupStage__c.object-meta.xml
<CustomObject>
    <customHelpPage>KimbleOne__Help</customHelpPage>
    <label>Delivery Group Stage</label>
    <nameField>
        <label>Delivery Group Stage Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Delivery Group Stages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>