force-app/main/default/objects/KimbleOne__DeliveryGroupStage__c/fields/KimbleOne__ApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ApprovalStatus__c</fullName>
    <label>Approval Status</label>
    <length>30</length>
    <type>Text</type>
</CustomField>