force-app/main/default/objects/KimbleOne__DeliveryGroupStage__c/fields/KimbleOne__DeliveryGroup__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryGroup__c</fullName>
    <label>Delivery Engagement</label>
    <referenceTo>KimbleOne__DeliveryGroup__c</referenceTo>
    <relationshipLabel>Delivery Group Stages</relationshipLabel>
    <relationshipName>DeliveryGroupStages</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>