force-app/main/default/objects/KimbleOne__DeliveryGroupStage__c/fields/KimbleOne__DeliveryStage__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DeliveryStage__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Delivery Stage</label>
    <referenceTo>KimbleOne__DeliveryStage__c</referenceTo>
    <relationshipLabel>Delivery Group Stages</relationshipLabel>
    <relationshipName>DeliveryGroupStages</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>