force-app/main/default/objects/KimbleOne__DeliveryGroupStage__c/fields/KimbleOne__EndDate__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__EndDate__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>